--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
             <div class="col-lg-4">  
               <div class="card mb-3">
                 <div class="card-body text-center">
-                  <img src="/static/img/avatars/{{user.avatar}}" alt="avatar" style="width: 80%;">
+                  <img src="/static/img/avatars/{{user.avatar}}" alt="avatar" style="width: 50%;">
                   <h4 class="my-3">{{user.login}}</h4>
                   <div class="d-flex justify-content-center mb-2">  
                     <a type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-secondary">Редактировать</a>
@@ -35,7 +35,7 @@
                             <p class="mb-0">Имя</p>
                         </div>
                         <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.firstName}}</p>
+                            <p class="text-muted mb-0">{{user.name}}</p>
                         </div>
                     </div>
                     <hr>
@@ -44,7 +44,7 @@
                             <p class="mb-0">Фамилия</p>
                         </div>
                         <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.lastName}}</p>
+                            <p class="text-muted mb-0">{{user.surname}}</p>
                         </div>
                     </div>
                     <hr>
@@ -53,7 +53,7 @@
                             <p class="mb-0">Отчество</p>
                         </div>
                         <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.fatherName}}</p>
+                            <p class="text-muted mb-0">{{user.patronymic}}</p>
                         </div>
                     </div>
                     <hr>
@@ -68,10 +68,10 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm-3">  
-                            <p class="mb-0">Возраст</p>
+                            <p class="mb-0">Класс</p>
                         </div>
                         <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.year}}</p>
+                            <p class="text-muted mb-0">{{user.class_number}}</p>
                         </div>
                     </div>
                     <hr>
@@ -84,14 +84,6 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <p class="mb-0">Местоположение</p>
-                        </div>
-                        <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.country}}, {{user.region}}</p>
-                        </div>
-                    </div>
                 </div>
             </div>
           </div>
