--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,68 @@
+.header {
+  height: 6vh;
+  display: flex;
+  justify-content: space-between;
+  background-color: #2e2e2e;
+}
+
+.a_head {
+  color: white;
+}
+
+.div_logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50vw;
+  height: 5vh;
+  /* border: 5px solid green; */
+}
+
+.be_centered {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.logo_png {
+  width: 5vh;
+  height: 5vh;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+
+.links {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  /* border: 5px solid black; */
+  text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Какая-то фигня снизу */
+
 .check_button {
     padding: .5em 1em;
     border: 1;
