--- a/templates/base.html
+++ b/templates/base.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
+    <!--  -->
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.22.2/dist/css/uikit.min.css" />
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.22.2/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.22.2/dist/js/uikit-icons.min.js"></script>
+    <!--  -->
+
     <title>{% block title %}{% endblock %}</title>
-    <script src= 
-"https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity= 
-"sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+
+    <script src= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity= "sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"> 
     </script>
     {% block script %}{% endblock %}    
 </head> 
 <body style="background-color: rgb(246, 246, 246);">
-    <div>
-      <header class="p-3 text-bg">
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <img src="/static/img/1676479214_preview_3732.jpg" width="3%">
-              <a class="nav-link active" aria-current="page" href="{{url_for('main_page')}}" style="color:white"><h2>СДАМЕГЭ</h2></a>
-              <form class="d-flex">
-                <a class="btn btn-outline-light me-2" href="{{url_for('main_page')}}" style="width: 100%;">Главная</a>
-              </form>
-              <div class="container" style="display: flex; justify-content: flex-end;">
-                <a class="btn btn-outline-light me-2" href="{{url_for('tasks')}}" style="width: 10%;">Задания</a>
-                <a class="btn btn-outline-light me-2" href="{{url_for('add_task_form')}}" style="width: 16%;">Добавить задание</a>
-                <a class="btn btn-outline-light me-2" href="{{url_for('register_choice')}}">Регистрация</a>
-                <a class="btn btn-outline-light" href="{{url_for('login_form')}}">Войти</a>
-              </div>
-            </div>
-        </div>
-        </nav>
-    </header>
-    </div>
+
+  <div class="header">
+      <a href="{{url_for('main_page')}}" class="div_logo uk-link-reset be_centered">
+        <img src="../static/img/Logo.jpg" class="be_centered logo_png">
+        <h2 class="a_head be_centered">Hampters EGE</h2>
+      </a>
+      <!-- <form class="d-flex">
+        <a class="btn btn-outline-light me-2" href="{{url_for('main_page')}}" style="width: 100%;">Главная</a>
+      </form> -->
+      <div class="links be_centered">
+        <a class="uk-link-heading be_centered" href="{{url_for('tasks')}}""><h3 class="a_head be_centered">Статьи</h3></a>
+        <a class="uk-link-heading be_centered" href="{{url_for('add_task_form')}}"><h3 class="a_head be_centered">Добавить статью</h3></a>
+        <a class="uk-link-heading be_centered" href="{{url_for('register_choice')}}"><h3 class="a_head be_centered">Регистрация</h3></a>
+        <a class="uk-link-heading be_centered" href="{{url_for('login_form')}}"><h3 class="a_head be_centered">Войти</h3></a>
+      </div>
+
+  </div>
     <div class="mt-5">
       {% block body %}{% endblock %}
     </div>
