--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %} 
-<div class="row py-lg-5 text-center">
+<!-- <div class="row py-lg-5 text-center">
   <div class="col-lg-6 col-md-8 mx-auto">
     <h1 style="font-size: 500%;">СДАМЕГЭ</h1>
     <p class="lead text-muted" style="font-size: 200%;">На нашем сайте вы можете решать задания егэ и добавлять свои. С нами вы гарантированно сдадите ЕГЭ по информатике!</p>
@@ -17,6 +17,83 @@
       <a href="/add_task_form" class="btn btn-outline-dark" style="width: 28%;">Добавить свое задание</a>
     </p>
   </div>
+</div> -->
+<link rel="stylesheet" href="../static/css/style_main_page.css">
+<div class="main">
+
+  <div class="main_info">
+
+    <div class="left">
+      <h1 class="be_centered">Hampters EGE</h1>
+      <h2 class="be_centered">Экзамен на соточку, счастье хомячку!</h2>
+    </div>
+
+    <div class="right">
+      <img src="../static/img/Main_info2.png" class="be_centered">
+    </div>
+
+  </div>
+
+  <h1> Наши возможности </h1>
+
+  <div class="cards">
+
+      <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin" uk-grid>
+        <!-- <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+            <img class="cards-img" src="../static/img/Main_info2.png" alt="" uk-cover>
+            <canvas width="20vh" height="20vh"></canvas>
+        </div> -->
+        <div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Большая база лекций!</h3>
+                <p>Для тщательной подготовки</p>
+            </div>
+            <div class="uk-card-footer">
+              <a href="#" class="uk-button uk-button-default">Приступить к изучению</a>
+            </div>
+        </div>
+      </div>
+    
+    <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin" uk-grid>
+      <!-- <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+          <img class="cards-img" src="../static/img/Main_info2.png" alt="" uk-cover>
+          <canvas width="20vh" height="20vh"></canvas>
+      </div> -->
+      <div>
+          <div class="uk-card-body">
+            <h3 class="uk-card-title">Добавляйте свои статьи!</h3>
+            <p>Просвещайте других</p>
+          </div>
+          <div class="uk-card-footer">
+            <a href="#" class="uk-button uk-button-default">Добавить статью</a>
+          </div>
+      </div>
+    </div>
+  
+    <div class="CARD uk-card uk-card-default uk-width-1-1 uk-margin" uk-grid>
+      <!-- <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+          <img class="cards-img" src="../static/img/Main_info2.png" alt="" uk-cover>
+          <canvas width="200" height="200"></canvas>
+      </div> -->
+      <div>
+          <div class="uk-card-body">
+              <h3 class="uk-card-title">Оценка прогресса</h3>
+              <p>Подборка задач специально под ваш уровень</p>
+          </div>
+          <div class="uk-card-footer">
+            <a href="#" class="uk-button uk-button-default">Узнать ваш уровень</a>
+          </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="footer">
+
+    <p></p>
+
+  </div>
+
 </div>
 {% endblock %}
 
