--- a/templates/register_choice.html
+++ b/templates/register_choice.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %} 
-    <h1 align="center" style="font-size: 500%">Вы джедай или ситх?</h1>
+    <h1 align="center" style="font-size: 70%">Выберите роль:</h1>
     <div class="container w-50 pt-4" align="center">  
         <div class="row">
             <div class="col">
