изменено:      templates/main_page.html

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -49,7 +49,7 @@
                 <p>Для тщательной подготовки</p>
             </div>
             <div class="uk-card-footer">
-              <a href="#" class="uk-button uk-button-default">Приступить к изучению</a>
+              <a href="{{url_for('tasks')}}" class="uk-button uk-button-default">Приступить к изучению</a>
             </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
             <p>Просвещайте других</p>
           </div>
           <div class="uk-card-footer">
-            <a href="#" class="uk-button uk-button-default">Добавить статью</a>
+            <a href="{{url_for('add_task_form')}}" class="uk-button uk-button-default">Добавить статью</a>
           </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
               <p>Подборка задач специально под ваш уровень</p>
           </div>
           <div class="uk-card-footer">
-            <a href="#" class="uk-button uk-button-default">Узнать ваш уровень</a>
+            <a href="{{url_for('login_form')}}" class="uk-button uk-button-default">Узнать ваш уровень</a>
           </div>
       </div>
     </div>
