--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,19 @@
   background-color: #2e2e2e;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  width: 100%; /* Шапка займёт всю ширину окна браузера */
+  z-index: 1000; /* Высокое значение, чтобы шапка была всегда на первом плане */
+}
+
+/**/
+
+a {
+  text-decoration: none;
+}
+
 .a_head {
   color: white;
 }
@@ -39,6 +52,10 @@
   align-items: center;
   /* border: 5px solid black; */
   text-align: center;
+}
+
+ul, li {
+  list-style: none;
 }
 
 
