--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <!--  -->
+        <!--  -->
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.22.2/dist/css/uikit.min.css" />
     <!-- UIkit JS -->
@@ -20,26 +19,34 @@
             integrity= "sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"> 
     </script>
+    <link rel="stylesheet" href="/static/css/style.css">
     {% block script %}{% endblock %}    
 </head> 
 <body style="background-color: rgb(246, 246, 246);">
 
-  <div class="header">
-      <a href="{{url_for('main_page')}}" class="div_logo uk-link-reset be_centered">
-        <img src="../static/img/Logo.jpg" class="be_centered logo_png">
-        <h2 class="a_head be_centered">Hampters EGE</h2>
-      </a>
-      <!-- <form class="d-flex">
-        <a class="btn btn-outline-light me-2" href="{{url_for('main_page')}}" style="width: 100%;">Главная</a>
-      </form> -->
-      <div class="links be_centered">
-        <a class="uk-link-heading be_centered" href="{{url_for('tasks')}}""><h3 class="a_head be_centered">Статьи</h3></a>
-        <a class="uk-link-heading be_centered" href="{{url_for('add_task_form')}}"><h3 class="a_head be_centered">Добавить статью</h3></a>
-        <a class="uk-link-heading be_centered" href="{{url_for('register_choice')}}"><h3 class="a_head be_centered">Регистрация</h3></a>
-        <a class="uk-link-heading be_centered" href="{{url_for('login_form')}}"><h3 class="a_head be_centered">Войти</h3></a>
-      </div>
+  <header style="display: flex; width: 100vw; justify-content: center;">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start" style="background-color: #2f2f2f; width: 100%; height: 8vh;">
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" style="margin-left: 10px; height: 100%; align-items: center;">
+          <img class="bi me-2 be_centered" src="../static/img/Logo.jpg" width="40" height="32" role="img" aria-label="aboba">
+          <h3 style="color: white; margin-top: auto; margin-bottom: auto;">Hampters EGE</h3>
+        </a>
 
-  </div>
+        <ul class="col-12 col-lg-auto me-lg-auto mb-2" style="display: flex; justify-content: center; align-items: center; margin-top: auto; margin-bottom: auto; height: 8vh;">
+          <!-- <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li> -->
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;"">Статьи</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Задания</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить статью</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить задание</a></li>
+        </ul>
+
+        <div class="text-end" style="margin-right: 10px">
+          <button type="button" class="btn btn-outline-light me-2">Вход</button>
+          <button type="button" class="btn btn-outline-light me-2">Регистрация</button>
+        </div>
+    </div>
+  </header>
+
+
     <div class="mt-5">
       {% block body %}{% endblock %}
     </div>
