--- a/static/css/style_main_page.css
+++ b/static/css/style_main_page.css
@@ -61,3 +61,7 @@
     display: flex;
     flex-direction: column;
 }
+
+.main a, li, h1, h2, h3, h4, p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
