--- a/templates/base.html
+++ b/templates/base.html
@@ -26,22 +26,22 @@
 
   <header style="display: flex; width: 100vw; justify-content: center;">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start" style="background-color: #2f2f2f; width: 100%; height: 8vh;">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" style="margin-left: 10px; height: 100%; align-items: center;">
+        <a href="{{url_for('main_page')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" style="margin-left: 10px; height: 100%; align-items: center;">
           <img class="bi me-2 be_centered" src="../static/img/Logo.jpg" width="40" height="32" role="img" aria-label="aboba">
           <h3 style="color: white; margin-top: auto; margin-bottom: auto;">Hampters EGE</h3>
         </a>
 
         <ul class="col-12 col-lg-auto me-lg-auto mb-2" style="display: flex; justify-content: center; align-items: center; margin-top: auto; margin-bottom: auto; height: 8vh;">
           <!-- <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li> -->
-          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;"">Статьи</a></li>
-          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Задания</a></li>
-          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить статью</a></li>
-          <li style="margin-top: auto; margin-bottom: auto;""><a href="#" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить задание</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('tasks')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;"">Статьи</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('tasks')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Задания</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_task_form')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить статью</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_task_form')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить задание</a></li>
         </ul>
 
         <div class="text-end" style="margin-right: 10px">
-          <button type="button" class="btn btn-outline-light me-2">Вход</button>
-          <button type="button" class="btn btn-outline-light me-2">Регистрация</button>
+          <a href="{{url_for('login_form')}}"><button type="button" class="btn btn-outline-light me-2">Вход</button></a>
+          <a href="{{url_for('register_choice')}}"><button type="button" class="btn btn-outline-light me-2">Регистрация</button></a>
         </div>
     </div>
   </header>
