--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
                 <a class="btn btn-outline-light me-2" href="{{url_for('tasks')}}" style="width: 10%;">Задания</a>
                 <a class="btn btn-outline-light me-2" href="{{url_for('add_task_form')}}" style="width: 16%;">Добавить задание</a>
                 <a class="btn btn-outline-light me-2" href="{{url_for('register_choice')}}">Регистрация</a>
+              <div class="" style="color:white">ВЫ: {{current_user.name}}</div>
                 <a class="btn btn-outline-light" href="{{url_for('login_form')}}">Войти</a>
               </div>
             </div>
