--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
               </form>
               <div class="container" style="display: flex; justify-content: flex-end;">
                 <a class="btn btn-outline-light me-2" href="{{url_for('posts')}}" style="width: 10%;">Статьи</a>
-                <a class="btn btn-outline-light me-2" href="{{url_for('add_post')}}" style="width: 10%;">Добавить</a>
+                <a class="btn btn-outline-light me-2" href="{{url_for('add_post')}}" style="width: 16%;">Добавить статью</a>
                 <a class="btn btn-outline-light me-2" href="{{url_for('tasks')}}" style="width: 10%;">Задания</a>
                 <a class="btn btn-outline-light me-2" href="{{url_for('add_task_form')}}" style="width: 16%;">Добавить задание</a>
                 <a class="btn btn-outline-light me-2" href="{{url_for('register_choice')}}">Регистрация</a>
