--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -6,12 +6,12 @@
 
 {% block body %}
 <div class="container mt-5">
-    <h1 align="center" style="margin-bottom: 2%; font-size:400%;">Новая статья</h1>
+    <h1 align="center" style="margin-bottom: 2%; font-size:300%;">Новая статья</h1>
     <form method="post" enctype="multipart/form-data">
         <p align= "center"><input type="text" name="name" id="name" class="form-control" value="" style="height: 100%; width: 40%; font-size: 250%; text-align: center; font-weight: bold;" placeholder="Название статьи" required></p><br>
-        <textarea name="text" id="text" class="form-control"  placeholder="Сценарий" rows="15"></textarea><br>
+        <textarea name="text" id="text" class="form-control"  placeholder="Статья" rows="15"></textarea><br>
         <input type="file" name="file" id="file" class="form-control" style="width: 22%"><br>
-        <input type="submit" name="post_scenary" class="btn btn-success" value="Запостить сценарий"> 
+        <input type="submit" name="post_scenary" class="btn btn-success mb-3" value="Запостить статью"> 
     </form>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>  
 </div>
