--- a/templates/posts.html
+++ b/templates/posts.html
@@ -6,11 +6,14 @@
 
 {% block body %}
 <div class="container w-75 pt-5">
-    <h1 class="mt-2" align="center" style="font-size: 10%;">Все статьи на сайте!</h1>
+    <h1 class="mt-2" align="center" style="font-size: 300%;">Cтатьи на сайте!</h1>
+    {% if tables|length == 0 %}
+        <h1 align="center" style="font-size: 200%;">Пока нет статей</h1>
+    {% endif %}
     {% for table in tables %}
         <div class="alert alert-info">
-            <h1 style="color: #000;">{{table['name']}}<img align="right" height="12%" width="13%" src="static/img/posts_img/{{table.filename}}"></h1> 
-            <p style="color:#000"><a href="posts/{{table['id']}}" class="btn btn-info">Подробнее</a>  Дата: нет</p>
+            <h1 style="color: #000;">{{table['name']}}<img align="right" height="12%" width="13%" src="static/img/posts_img/{{table.avatar_name}}"></h1> 
+            <p style="color:#000"><a href="posts/{{table['id']}}" class="btn btn-info">Подробнее</a>  Дата: {{table.date}}</p>
         </div>
     {% endfor %}
 </div>
