--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,9 @@
 
         <ul class="col-12 col-lg-auto me-lg-auto mb-2" style="display: flex; justify-content: center; align-items: center; margin-top: auto; margin-bottom: auto; height: 8vh;">
           <!-- <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li> -->
-          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('tasks')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;"">Статьи</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('posts')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;"">Статьи</a></li>
           <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('tasks')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Задания</a></li>
-          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_task_form')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить статью</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_post')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить статью</a></li>
           <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_task_form')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить задание</a></li>
         </ul>
 
