NORMAL MARKDOWN WITH LATEX AND PYTHON CODE SINTAXIS

--- a/templates/post.html
+++ b/templates/post.html
@@ -10,6 +10,11 @@
 <!-- приветствую тебя, дорогой Михаил -->
 
 {% block body %}
+<!-- надеюсь, ты не сильно разозлишься из-за style в body.... -->
+<!-- но если что, заранее прости -->
+
+<link rel="stylesheet" href="../static/css/code_style.css">
+
 <div class="post_detail pt-1">
   <div class="container w-100 mt-5 mb-4">
       <div class="container w-50 mt-5">
