--- a/templates/post.html
+++ b/templates/post.html
@@ -38,14 +38,18 @@
     <a class="btn btn-danger" href="{{table.id}}/delete">Удалить</a>
   </div>
   <div id="chatinfodiv37" style="display: none; visibility: hidden;">{{table.id}}</div>
-  <div id="send_message_div">
-    <input type="text" value="" id="send_message_input" placeholder="Введите сообщение">
-    <button onclick="send_message()" class="btn btn-outline-success"></button>
+  <div class="container w-75 mt-5" id="send_message_div">
+    <label>Напишите комментарий к статье</label>
+    <textarea type="text" name="comment_text" id="send_message_input" class="form-control" rows="3"></textarea>
+    <button onclick="send_message()" class="btn btn-outline-dark m-2">Отправить</button>
+    <!-- <input type="text" value="" id="send_message_input" placeholder="Введите сообщение">
+    <button onclick="send_message()" class="btn btn-outline-success"></button> -->
   </div>
   <div id="chatdiv37">
     {{forum|safe}}
     <!-- тут с помощью js вставится чат когда я это доделаю -->
-    </div>
+  </div>
+  <script src="/static/forum.js"></script>
 </div>
 {% endblock %}
 
