--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
     {% block script %}{% endblock %}    
 </head> 
-<body style="background-color: rgb(246, 246, 246);">
+<body style="background-color: rgb(246, 246, 246); height: 100vh;">
 
   <header style="display: flex; width: 100vw; justify-content: center;">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start" style="background-color: #2f2f2f; width: 100%; height: 8vh;">
