--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,7 +11,7 @@
             <div class="col-lg-4">  
               <div class="card mb-3">
                 <div class="card-body text-center">
-                  <img src="/static/img/avatars/{{user.avatar}}" alt="avatar" style="width: 80%;">
+                  <img src="/static/img/avatars/{{user.avatar}}" alt="avatar" style="width: 64%;">
                   <h4 class="my-3">{{user.login}}</h4>
                   <div class="d-flex justify-content-center mb-2">  
                     <a type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-secondary">Редактировать</a>
@@ -66,10 +66,10 @@
                     <hr>
                     <div class="row">
                         <div class="col-sm-3">  
-                            <p class="mb-0">Возраст</p>
+                            <p class="mb-0">Класс</p>
                         </div>
                         <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.year}}</p>
+                            <p class="text-muted mb-0">{{user.class_number}}</p>
                         </div>
                     </div>
                     <hr>
@@ -82,14 +82,6 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <p class="mb-0">Местоположение</p>
-                        </div>
-                        <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{user.country}}, {{user.region}}</p>
-                        </div>
-                    </div>
                 </div>
             </div>
           </div>
