--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -49,7 +49,7 @@
                 <p>Для тщательной подготовки</p>
             </div>
             <div class="uk-card-footer">
-              <a href="{{url_for('tasks')}}" class="uk-button uk-button-default">Приступить к изучению</a>
+              <a href="{{url_for('posts')}}" class="uk-button uk-button-default">Приступить к изучению</a>
             </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
             <p>Просвещайте других</p>
           </div>
           <div class="uk-card-footer">
-            <a href="{{url_for('add_task_form')}}" class="uk-button uk-button-default">Добавить статью</a>
+            <a href="{{url_for('add_post')}}" class="uk-button uk-button-default">Добавить статью</a>
           </div>
       </div>
     </div>
