--- a/templates/post.html
+++ b/templates/post.html
@@ -27,7 +27,7 @@
               </tbody>
           </table>
       </div>
-      {{table.text | safe}}
+      {{table_text | safe}}
     {% if table.video_link != "" %}
       <iframe width="720" height="405"
       src="https://rutube.ru/play/embed/{{table.video_link}}" frameBorder="0" allow="clipboard-write; autoplay"
