--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -10,7 +10,7 @@
         <p align="center">
             <input type="text" name="name" id="name" class="form-control" value="{{table.name}}" style="height: 100%; width: 40%; font-size: 250%; text-align: center; font-weight: bold;" placeholder="Название статьи" required>
         </p><br>
-        <textarea name="text" id="text" row="{{cnt_row}}" class='form-control textareaElement'>{{table.text}}</textarea>
+        <textarea name="text" id="text" rows="{{cnt_row}}" class='form-control textareaElement'>{{table.text}}</textarea>
         
         <label class="pt-2">Добавить видео в статью(ссылка)</label>
         <input type="text" value="{{table.video_link}}" class="form-control mb-3" id="video_link" name="video_link" style="width:30%;">
