--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -65,17 +65,22 @@
                 <button type="button" class="btn btn-outline-danger mt-4" onclick="checkAllResponses();" style="width: 90%;">Проверить задания</button>
             </form>
         </div>
-        <div class="col-sm-10" style="overflow-y: auto; height: 85vh;"> <!-- Добавляем прокрутку для правой колонки -->
+        <div class="col-sm-10" style="overflow-y: auto; height: 100vh;"> <!-- Добавляем прокрутку для правой колонки -->
             <h1 align="center" class="pt-2 pb-2">Задачи ЕГЭ</h1>
-            {% for task in tasks %}
+            {% for task, tags_for_task in tasks %}
                 <div class="task-item border rounded p-3 mb-3">
                     <p>({{task["source"]}}) №{{task["number"]}} {{task["statement"]}}</p>
                     {% if task.file_name == None %}
-                    {% elif task.file_name[-3:] == "png" or task.file_name[-4:] == "jpeg" %}
+                    {% elif task.file_name[-3:] == "png" or task.file_name[-3:] == "jpg" %}
                         <img src="/static/img/{{task.file_name}}" class="img-fluid m-2" alt="..." width="40%">
                     {% elif task.file_name[-3:] == "txt" or task.file_name[-3:] == "xls" or task.file_name[-4:] == "xlsx" %}
                         <a href="/static/img/{{task.file_name}}" style="color:black" download>Скачать файл</a>
                     {% endif %}
+                    <p>
+                        {% for tag in tags_for_task %}
+                            #{{tag}}
+                        {% endfor %}  
+                    </p>
                     <div class="row">
                         <div id="FORM_div">
                             <form id="responseForm_{{task.id}}" data-answer="{{task.answer}}" onsubmit="return handleSubmit(event, '{{task.id}}', '{{task.answer}}');">
