--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,7 +7,7 @@
 {% block script %}
 {% endblock %}
 
-{% block body %}    
+{% block body %}
 <div class="container">
    <div class="row"> <!-- Устанавливаем высоту для всей строки -->
         <div class="col-2" style="overflow-y: auto; height: 98vh;"> <!-- Добавляем прокрутку для левой колонки -->
@@ -17,7 +17,7 @@
                         <span class="fs-5 fw-semibold ms-4"><h2>Фильтры</h2></span>
                     </a>
                     <ul class="list-unstyled ps-0">
-                        <li class="mb-1">   
+                        <li class="mb-1">
                             <button style="width: 90%;" type="button" class="btn btn-outline-dark align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#number_tasks-collapse" aria-expanded="true">
                                 Выбрать задания
                             </button>
@@ -32,7 +32,7 @@
                                                 <div class="control__indicator"></div>
                                             </label>
                                         </div>
-                                    </li>                  
+                                    </li>
                                     {% endfor %}
                                 </ul>
                             </div>
@@ -54,14 +54,14 @@
                                                     <div class="control__indicator"></div>
                                                 </label>
                                             </div>
-                                        </li> 
+                                        </li>
                                     {% endfor %}
                                 </ul>
                             </div>
                           </li>
                     </ul>
                 </div>
-                <button type="submit" class="btn btn-outline-success" style="width: 90%;">Применить</button> 
+                <button type="submit" class="btn btn-outline-success" style="width: 90%;">Применить</button>
                 <button type="button" class="btn btn-outline-danger mt-4" onclick="checkAllResponses();" style="width: 90%;">Проверить задания</button>
             </form>
         </div>
@@ -69,7 +69,7 @@
             <h1 align="center" class="pt-2 pb-2">Задачи ЕГЭ</h1>
             {% for task in tasks %}
                 <div class="task-item border rounded p-3 mb-3">
-                    <p>({{task["source"]}}) №{{task["number"]}} {{task["statement"]}}</p>
+                    <p>({{task["source"]}}{% if task["author"] %}, {{task["author"]}}{% endif %}) №{{task["number"]}} {{task["statement"]}}</p>
                     {% if task.file_name == None %}
                     {% elif task.file_name[-3:] == "png" or task.file_name[-4:] == "jpeg" %}
                         <img src="/static/img/{{task.file_name}}" class="img-fluid m-2" alt="..." width="40%">
@@ -82,7 +82,7 @@
                                 <input type="text" name="userResponse_{{task.id}}" id="userResponse_{{task.id}}" placeholder="Введите ответ">
                                 <button type="submit" class="btn btn-outline-dark">Проверить</button>
                                 <button type="button" class="btn btn-outline-dark" onclick="toggleAnswer('answer_{{task.id}}')" style="width: 15%;">Показать ответ</button>
-                            </form>   
+                            </form>
                         </div>
                         <div id="result_{{task.id}}" class="result"></div>
                         <div id="answer_{{task.id}}" class="answer" style="width: 4%;">{{ task.answer }}</div>
