Add tags filter, final commit

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -59,6 +59,10 @@
                                 </ul>
                             </div>
                           </li>
+                          <li class="mb-1">
+                            <label>Поиск по тегам</label>
+                            <input name="tags" id="tags" type="text" class="form-control" placeholder="Ввод через ','" style="width: 90%;">
+                          </li>
                     </ul>
                 </div>
                 <button type="submit" class="btn btn-outline-success" style="width: 90%;">Применить</button> 
