--- a/templates/add_task_form.html
+++ b/templates/add_task_form.html
@@ -49,9 +49,9 @@
                 <input name="answer" id="answer" class="ms-2" type="number" placeholder="Ответ" style="width: 15%;" required/>
                 <select name="select_difficulty" id="select_difficulty" class="form-select ms-2" aria-label="Default select example" style="width: 18%;" required>
                     <option selected disabled value="">Cложность</option >
-                    <option value="0">Легкая</option>
-                    <option value="1">Нормальная</option>
-                    <option value="2">Сложная</option>  
+                    <option value="Легкая">Легкая</option>
+                    <option value="Нормальная">Нормальная</option>
+                    <option value="Сложная">Сложная</option>  
                 </select>
                 <input type="file" name="file" id="file" class="form-control ms-2" style="width: 29%"/>
             </div>
