--- a/templates/pitch.html
+++ b/templates/pitch.html
@@ -2,7 +2,7 @@
 {% block title %} Главная страница {% endblock %} 
 {% block script %} {% endblock %} 
 {% block body %}
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div class="d-flex justify-content-center align-items-center" style="height: calc(100vh - 8vh); padding-top: 20px;">
   <div style="max-width: 50%; width: 100%;">
     <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="carousel">
       <div class="carousel-indicators">
