add presentations to base

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,10 @@
           <!-- <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li> -->
           <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('posts')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;"">Статьи</a></li>
           <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('tasks')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Задания</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('pitches')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Презентации</a></li>
           <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_post')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить статью</a></li>
           <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_task_form')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить задание</a></li>
+          <li style="margin-top: auto; margin-bottom: auto;""><a href="{{url_for('add_pitch')}}" class="nav-link px-2 text-white be_centered" style="text-decoration: none; margin-top: auto; margin-bottom: auto;">Добавить презентацию</a></li>
         </ul>
 
         <div class="text-end right_header">
